<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"

>

    <EditText
            android:id="@+id/p1_insert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="@string/enter_player_one"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/vsTextview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:targetApi="o" />
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/p2_insert"
            app:layout_constraintEnd_toEndOf="@+id/p1_insert" app:layout_constraintStart_toStartOf="@+id/p1_insert"
            android:hint="@string/enter_player_two" android:importantForAutofill="no" tools:targetApi="o"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/play_btn"/>

    <Button
            android:id="@+id/play_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/circle"
            android:text="@string/play"
            android:textColor="@color/darkCol"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/p2_insert" />

    <Button
            android:id="@+id/play_ai_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/circle"
            android:text="@string/play_ai"
            android:textColor="@color/darkCol"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/play_btn"
            app:layout_constraintEnd_toEndOf="@+id/p2_insert"
            app:layout_constraintStart_toEndOf="@+id/play_btn" />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/errorTextView" app:layout_constraintStart_toEndOf="@+id/p1_insert"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:id="@+id/vsTextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/vs_textView"
            android:textColor="@color/secCol"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/p2_insert"
            app:layout_constraintEnd_toEndOf="@+id/p1_insert"
            app:layout_constraintStart_toStartOf="@+id/p1_insert" />
</android.support.constraint.ConstraintLayout>